# accessible-ai

./: .gitignore  IMPLEMENTATION_PLAN.md  PRODUCTION_READY_SUMMARY.md  PROJECT_SUMMARY.md  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  gunicorn_config.py  pyproject.toml  start_production.bat  start_production.sh
backend/app/: config.py  error_handlers.py  logging_config.py  main.py  openapi.py
backend/app/api/v1/: __init__.py  auth.py  health.py  scans.py  subscriptions.py  websites.py
backend/app/core/: dependencies.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 001_initial.py
backend/app/models/: scan.py  subscription.py  usage.py  user.py  website.py
backend/app/schemas/: scan.py  subscription.py  user.py  website.py
backend/app/services/: ai_fixer.py  api_key.py  email.py  scanner.py
backend/app/tasks/: __init__.py  emails.py  reports.py  scans.py
backend/app/worker/: celery.py
backend/tests/: conftest.py  test_auth.py  test_fastapi_conftest.py
backend/tests/e2e/: test_e2e.py
docs/: DEPLOYMENT.md  design.md  postman_collection.json
frontend/: .env.local.example  Dockerfile  components.json  package-lock.json  package.json
frontend/src/: types.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: analytics.ts  api.ts  components.ts  store.ts  (+1 more)
plugins/wordpress/: accessible-ai.php  readme.txt
scripts/: load_test.py  requirements.txt
(+35 files in other folders)
